--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,9 +7,11 @@ html
         meta(name='author', content='Mourad Hrm')
         title Phd Management - NodeJS, Pug and Neo4j
         link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/bootstrap.min.css')
-        link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/pages.css')
         link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/core.css')
         link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/components.css')
+        link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/icons.css')
+        link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/pages.css')
+        //link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/font-awesome.min.css')
         script(src='/bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js')
         script(src='/bootstrap-3.3.7-dist/js/bootstrap.min.js')
     body.widescreen
