Intégration du détail des doctorants

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,4 +15,4 @@ html
         script(src='/bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js')
         script(src='/bootstrap-3.3.7-dist/js/bootstrap.min.js')
     body.fixed-left.widescreen
-        block content
+        block body
