--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,14 +1,13 @@
 extends layout.pug
-mixin doct(nom, prenom, intitul, domaine)
-    .col-md-4
-        .grid-container.card-box
-             h2=nom + ' ' + prenom
-             h3=intitul
-             p=domaine
-             p
-                 a.btn.btn-primary(href='' role='button') Détails &raquo;
+mixin doct(nom, prenom, intitul, id)
+    .masonry-item
+        .card-box.masonry-well
+            h2= prenom + ' ' + nom
+            p= intitul
+                p
+                    a.btn.btn-primary(href=`dashboard/`+id, role='button') Détails &raquo;
 
-block content
+block body
     if(user)
         #wrapper
             .topbar
@@ -45,19 +44,14 @@ block content
                                             a(href='logout')
                                                 i.ti-power-off.m-r-10.text-danger
                                                 |Déconnexion
-                
-            .content-page
-                .content
-                    .container
-                        .jumbotron
-                            h1 Doctorants
-                    .container
-                        .masonry-row
-                            if resultats.length
-                                for doc in resultats
-                                    .masonry-item
-                                        .card-box.masonry-well
-                                            h2 #{doc.prenom} #{doc.nom}
-                                            p #{doc.intitule}
-                                            p
-                                                a.btn.btn-primary(href='' role='button') Détails &raquo;
+            block content    
+                .content-page
+                    .content
+                        .container
+                            .jumbotron
+                                h1 Doctorants
+                        .container
+                            .masonry-row
+                                if resultats.length
+                                    for doc in resultats
+                                        +doct(`${doc.nom}`, `${doc.prenom}`, `${doc.intitule}`,`${doc.idDoct}`)
