--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -54,4 +54,4 @@ block body
                             .masonry-row
                                 if resultats.length
                                     for doc in resultats
-                                        +doct(`${doc.nom}`, `${doc.prenom}`, `${doc.intitule}`,`${doc.idDoct}`)
+                                        +doct(`${doc[0].nom}`, `${doc[0].prenom}`, `${doc[1].intitule}`,`${doc[0]._id}`)
