--- a/views/doct_detail.pug
+++ b/views/doct_detail.pug
@@ -1,4 +1,10 @@
 extends dashboard.pug
+mixin membre(nom, prenom, role, etablissement)
+    tr
+        td
+            a(href='')=prenom + ' ' + nom
+        td=role
+        td=etablissement
 
 block content
     if(resultats)
@@ -7,7 +13,7 @@ block content
                 .content
                     .container
                         .jumbotron
-                            h1 #{resultats.prenom} #{resultats.nom}
+                            h1 #{resultats[0][0].prenom} #{resultats[0][0].nom}
                     .container
                         .row
                             .col-md-12
@@ -18,31 +24,25 @@ block content
                                     .panel-heading
                                         h3.panel-title Nom
                                     .panel-body
-                                        p #{resultats.nom}                        
+                                        p #{resultats[0][0].nom}                        
                             .col-md-3
                                 .panel.panel-border.panel-custom
                                     .panel-heading
                                         h3.panel-title Prenom
                                     .panel-body
-                                        p #{resultats.prenom}
-                            .col-md-2
-                                .panel.panel-border.panel-custom
-                                    .panel-heading
-                                        h3.panel-title ID doctorant
-                                    .panel-body
-                                        p #{resultats.idDoct}
-                            .col-md-2
+                                        p #{resultats[0][0].prenom}
+                            .col-md-3
                                 .panel.panel-border.panel-custom
                                     .panel-heading
                                         h3.panel-title Téléphone
                                     .panel-body
-                                        p #{resultats.phone}
-                            .col-md-2
+                                        p #{resultats[0][0].telephone}
+                            .col-md-3
                                 .panel.panel-border.panel-custom
                                     .panel-heading
                                         h3.panel-title Adresse email
                                     .panel-body
-                                        p #{resultats.mail}
+                                        p #{resultats[0][0].mail}
                         .row
                             .col-md-12
                                 h4.page-header.header-title Thèse
@@ -52,34 +52,42 @@ block content
                                     .panel-heading
                                         h3.panel-title Type de thèse
                                     .panel-body
-                                        p #{resultats.type_thèse}
+                                        p #{resultats[0][1].type_these}
                             .col-md-2
                                 .panel.panel-border.panel-custom
                                     .panel-heading
                                         h3.panel-title Domaine
                                     .panel-body
-                                        p #{resultats.domaine}
+                                        p #{resultats[0][1].domaine}
                             .col-md-8
                                 .panel.panel-border.panel-custom
                                     .panel-heading
                                         h3.panel-title Intitulé de thèse
                                     .panel-body
-                                        p #{resultats.intitule}
+                                        p #{resultats[0][1].intitule}
                             .col-md-4
                                 .panel.panel-border.panel-custom
                                     .panel-heading
                                         h3.panel-title Date de début
                                     .panel-body
-                                        p=format_date(`${resultats.datedebut}`)
+                                        p= format_date(`${resultats[0][2].date_debut}`)
                             .col-md-4
                                 .panel.panel-border.panel-custom
                                     .panel-heading
-                                        h3.panel-title Date de fin
+                                        h3.panel-title Date de soutenance
                                     .panel-body
-                                        p= format_date(`${resultats.datefin}`)
-                            .col-md-4
-                                .panel.panel-border.panel-custom
-                                    .panel-heading
-                                        h3.panel-title Etat
-                                    .panel-body
-                                        p #{resultats.etat}  
+                                        p= format_date(`${resultats[0][2].date_fin}`)
+                        .row
+                            .col-md-12
+                                h4.page-header.header-title Membres du jury
+                        .row
+                            .card-box
+                                table.table.table-striped
+                                    thead
+                                        tr
+                                            th Nom & prénom
+                                            th Rôle
+                                            th Etablissement
+                                    tbody
+                                        for res in resultats
+                                            +membre(`${res[3].nom}`, `${res[3].prenom}`, `${res[4]}`, `${res[3].etablissement}`)
