--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
         meta(name='author', content='Mourad Hrm')
         title Phd Management - NodeJS, Pug and Neo4j
         link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/bootstrap.min.css')
+        link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/form.css')
         link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/core.css')
         link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/components.css')
         link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/icons.css')
