--- a/views/membre_jury_detail.pug
+++ b/views/membre_jury_detail.pug
@@ -1,11 +1,11 @@
 extends dashboard.pug
 
-mixin membre(intitule, role , nom, prenom)
+mixin membre(id, intitule, role , nom, prenom)
     tr
         td=intitule
         td=role
         td
-            a(href='')=prenom + ' ' + nom
+            a(href='/doctorants/'+id)=prenom + ' ' + nom
         
         
 
@@ -71,4 +71,4 @@ block content
                                             th Doctorant
                                     tbody
                                         for res in resultats
-                                            +membre(`${res[1].intitule}`, `${res[2]}`  , `${res[3].nom}`,`${res[3].prenom}`)
+                                            +membre(`${res[3]._id}`, `${res[1].intitule}`, `${res[2]}`  , `${res[3].nom}`,`${res[3].prenom}`)
