Ajout modification thèse

--- a/public/bootstrap-3.3.7-dist/css/form.css
+++ b/public/bootstrap-3.3.7-dist/css/form.css
@@ -1,4 +1,16 @@
-#abc {
+#form1 {
+width:100%;
+z-index: 1000 ;
+height:100%;
+opacity:.95;
+top:0;
+left:0;
+display:none;
+position:fixed;
+background-color:#313131;
+overflow:auto
+}
+#form2 {
 width:100%;
 z-index: 1000 ;
 height:100%;
