--- a/views/membre_jury_detail.pug
+++ b/views/membre_jury_detail.pug
@@ -60,7 +60,7 @@ block content
                                         p #{resultats[0][0].grade}
                         .row
                             .col-md-12
-                                h4.page-header.header-title Ses Thèses
+                                h4.page-header.header-title Thèses
                         .row
                             .card-box
                                 table.table.table-striped
