--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,5 +15,6 @@ html
         //link(rel='stylesheet', href='/bootstrap-3.3.7-dist/css/font-awesome.min.css')
         script(src='/bootstrap-3.3.7-dist/js/jquery-3.1.1.min.js')
         script(src='/bootstrap-3.3.7-dist/js/bootstrap.min.js')
+        script(src='/bootstrap-3.3.7-dist/js/form.js')
     body.fixed-left.widescreen
         block body
