--- a/views/membres_jury.pug
+++ b/views/membres_jury.pug
@@ -1,10 +1,11 @@
 extends dashboard.pug
 
-mixin membre_jury(nom, prenom, grade, id)
+mixin membre_jury(nom, prenom, grade, etablissement, id)
     .masonry-item
         .card-box.masonry-well
             h2= prenom + ' ' + nom
             p= grade
+            p= etablissement
                 p
                     a.btn.btn-primary(href=`membres_jury/`+id, role='button') Détails &raquo;
 block content
@@ -17,4 +18,4 @@ block content
                 .masonry-row
                     if resultats.length
                         for membre_jury in resultats
-                            +membre_jury( `${membre_jury.nom}`, `${membre_jury.prenom}`, `${membre_jury.grade}`,`${membre_jury._id}`)
+                            +membre_jury( `${membre_jury.nom}`, `${membre_jury.prenom}`, `${membre_jury.grade}` , `${membre_jury.etablissement}`,`${membre_jury._id}`)
